Добавлены файлы со второй домашкой
Также добавлен обновленный файл с первый домашкой

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,45 @@
     "from nltk.corpus import stopwords\n",
     "from pymorphy2 import MorphAnalyzer\n",
     "from collections import Counter\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "from natasha import (\n",
+    "    Segmenter,\n",
+    "    MorphVocab,\n",
+    "\n",
+    "    NewsEmbedding,\n",
+    "    NewsMorphTagger,\n",
+    "    NewsSyntaxParser,\n",
+    "    NewsNERTagger,\n",
+    "\n",
+    "    PER,\n",
+    "    NamesExtractor,\n",
+    "\n",
+    "    Doc\n",
+    ")\n",
+    "import spacy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "session = requests.session()\n",
     "sw = stopwords.words('russian')\n",
-    "morph = MorphAnalyzer()"
+    "morph = MorphAnalyzer()\n",
+    "\n",
+    "nlp = spacy.load('ru_core_news_sm')\n",
+    "\n",
+    "segmenter = Segmenter()\n",
+    "morph_vocab = MorphVocab()\n",
+    "\n",
+    "emb = NewsEmbedding()\n",
+    "morph_tagger = NewsMorphTagger(emb)\n",
+    "syntax_parser = NewsSyntaxParser(emb)\n",
+    "ner_tagger = NewsNERTagger(emb)\n",
+    "\n",
+    "names_extractor = NamesExtractor(morph_vocab)"
    ]
   },
   {
@@ -46,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,13 +82,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "pro_texts = []\n",
     "contra_texts = []\n",
     "check_texts = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chunker(text):\n",
+    "  ngramms = []\n",
+    "  dct = {'ADJF': 'ADJ', 'ADJS': 'ADJ', 'COMP': 'ADJ', 'INFN': 'VERB',\n",
+    "  'PRTF': 'VERB', 'PRTS': 'VERB', 'GRND': 'VERB'}\n",
+    "\n",
+    "  doc = Doc(text)\n",
+    "  doc.segment(segmenter)\n",
+    "  doc.tag_morph(morph_tagger)\n",
+    "\n",
+    "  for token in doc.tokens:\n",
+    "    token.lemmatize(morph_vocab)\n",
+    "\n",
+    "  i = 0\n",
+    "  l = -2  ## На случай, если какой-то из интересующих нас частеречных тегов, являющийся вторым элементом ngramm'ы, появится раньше, чем первый элемент такой ngramm'ы\n",
+    "  k = -2\n",
+    "  m = -2\n",
+    "\n",
+    "  for t in doc.tokens:\n",
+    "\n",
+    "    if t.pos == 'VERB':              ## Если предыдущее слово является элементом ngramm'ы\n",
+    "      if i == m + 1:\n",
+    "        mor = morph.parse(t.text)\n",
+    "        for el in mor:\n",
+    "          if el.tag.POS in dct:\n",
+    "            tg = dct[el.tag.POS]\n",
+    "          else:\n",
+    "            tg = el.tag.POS\n",
+    "          if tg == 'VERB':\n",
+    "            ngramms[-1].append(el.normal_form)  ## В наших интересах записывать начальные формы, так как в таком случае от них будет больше пользы\n",
+    "            break\n",
+    "          if el == mor[-1]:             ## Если pymorphy не смог разобрать слово как нужную нам часть речи, то приходится добавлять форму, которая встретилась в тексте\n",
+    "            ngramms[-1].append(t.text)\n",
+    "\n",
+    "    elif t.pos == 'NOUN':\n",
+    "      if i == k + 1:              ## Если предыдущее слово является элементом ngramm'ы\n",
+    "        mor = morph.parse(t.text)\n",
+    "        for el in mor:\n",
+    "          if el.tag.POS == 'NOUN':   ## Так как все теги, обозначающие прилагательные, записаны в словаре перевода тегов, можно проверять подходит ли нам этот разбор только по тем тегам, которые есть в словаре\n",
+    "            ngramms[-1].append(el.normal_form)\n",
+    "            break\n",
+    "          if el == mor[-1]:\n",
+    "            ngramms[-1].append(t.text)\n",
+    "\n",
+    "    elif t.pos == 'ADJ':\n",
+    "      if i == l + 1:              ## Если предыдущее слово является элементом ngramm'ы\n",
+    "        mor = morph.parse(t.text)\n",
+    "        for el in mor:\n",
+    "          tg = ''\n",
+    "          if el.tag.POS in dct:\n",
+    "            tg = dct[el.tag.POS]\n",
+    "          if tg == 'ADJ':\n",
+    "            ngramms[-1].append(el.normal_form)\n",
+    "            break\n",
+    "          if el == mor[-1]:\n",
+    "            ngramms[-1].append(t.text)\n",
+    "\n",
+    "    elif k == i - 1 or l == i - 1 or m == i - 1:\n",
+    "      ngramms = ngramms[:-1]\n",
+    "\n",
+    "    if t.pos == 'ADJ':\n",
+    "      k = i\n",
+    "      ngramms.append([t.text])\n",
+    "\n",
+    "    elif t.text == 'очень':\n",
+    "      l = i\n",
+    "      ngramms.append([t.text])\n",
+    "\n",
+    "    elif t.text == 'не':\n",
+    "      m = i\n",
+    "      ngramms.append([t.text])\n",
+    "\n",
+    "    i += 1\n",
+    "  return ngramms"
    ]
   },
   {
@@ -75,12 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "for_check = {}\n",
     "ind = 0\n",
+    "pos_ng = []\n",
+    "neg_ng = []\n",
     "\n",
     "for i in range(1, 9):\n",
     "    page_number = i\n",
@@ -112,16 +222,21 @@
     "            pro_texts.append(fb_soup.find('span', {'class': 'pro'}).text)\n",
     "            contra_texts.append(fb_soup.find('span', {'class': 'contra'}).text)\n",
     "            rank = fb_soup.find('abbr', {'class': 'rating'}).attrs['title']\n",
+    "            ng = chunker(fb_text)\n",
     "            if (rank == '5' or rank == '4') and len(pro_texts) < 61:  ## Так как я добавляю еще и текст из строки \"достоинства\", на 30 текстов будет приходиться 60 элементов списка\n",
     "                pro_texts.append(fb_text)\n",
+    "                pos_ng.extend(ng)\n",
     "            elif rank != '5' and rank != '4' and len(contra_texts) < 61: ## То же самое, что и в случае с высокой оценкой\n",
     "                contra_texts.append(fb_text)\n",
+    "                neg_ng.extend(ng)\n",
     "            elif len(check_texts) < 11:     ## Если в списке, к которому подходит этот отзыв, уже есть 30 отзывов, и в тестовой выборке еще не собралось 10 текстов, то мы добавляем этот текст в нее\n",
     "                check_texts.append(fb_text)\n",
     "                if rank == '5' or rank == '4':\n",
     "                    for_check[ind] = 'pro'\n",
+    "                    pos_ng.extend(ng)\n",
     "                else:\n",
     "                    for_check[ind] = 'contra'\n",
+    "                    neg_ng.extend(ng)\n",
     "                ind += 1\n",
     "            if len(check_texts) > 9 and len(pro_texts) > 60 and len(contra_texts) > 60:\n",
     "                break\n",
@@ -140,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,8 +300,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BEFORE"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +317,7 @@
        "1.0"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,6 +338,7 @@
     "            c += 1\n",
     "        elif lemma in contra_prep:\n",
     "            c -= 1\n",
+    "\n",
     "    if c > 0:\n",
     "        res[ind] = 'pro'\n",
     "        ind += 1\n",
@@ -231,6 +354,76 @@
     "for i, j in res.items():\n",
     "    real.append(j)\n",
     "accuracy_score(real, exp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AFTER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = {}\n",
+    "ind = 0\n",
+    "exp = []\n",
+    "real = []\n",
+    "\n",
+    "for text in check_texts:\n",
+    "    c = 0\n",
+    "    chunks = chunker(text)\n",
+    "    for ch in chunks:\n",
+    "        if ch in pos_ng:\n",
+    "            c += 1\n",
+    "        elif ch in neg_ng:\n",
+    "            c -= 1\n",
+    "    tokenized_text = [w.lower() for w in word_tokenize(text) if w.isalpha()]\n",
+    "    filt_words = [w for w in tokenized_text if w not in sw]\n",
+    "    lemmas = [morph.parse(w)[0].normal_form for w in filt_words]\n",
+    "    for lemma in lemmas:\n",
+    "        if lemma in pro_prep:\n",
+    "            c += 1\n",
+    "        elif lemma in contra_prep:\n",
+    "            c -= 1\n",
+    "\n",
+    "    if c > 0:\n",
+    "        res[ind] = 'pro'\n",
+    "        ind += 1\n",
+    "    elif c < 0:\n",
+    "        res[ind] = 'contra'\n",
+    "        ind += 1\n",
+    "    else:\n",
+    "        res[ind] = 'neutral'\n",
+    "        ind += 1\n",
+    "\n",
+    "for i, j in for_check.items():\n",
+    "    exp.append(j)\n",
+    "for i, j in res.items():\n",
+    "    real.append(j)\n",
+    "accuracy_score(real, exp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В моем случае accuracy не поменялась, так как она и была 1.0, но зато можно точно сказать, что качество не упало, значит, выбор именно этих ngramm не является совсем плохим."
    ]
   },
   {
