--- a/autobreya_hw2.ipynb
+++ b/autobreya_hw2.ipynb
@@ -27,7 +27,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Я использую youtube-dl для скачивания видео, webvtt-py для субтитров, ffmpeg для аудиодорожки"
+        "Я использую youtube-dl для скачивания видео и субтитров, ffmpeg для аудиодорожки"
       ],
       "metadata": {
         "id": "GWX0zKPDP9MU"
